# tc-payment-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS
.github/workflows/: pr-checks.yml  pr-comment.yml  release-dev.yml  release-production.yml  test-coverage.yml
app/: main.py
app/database/: database.py
app/middleware/: __init__.py  middleware.py
app/models/: models.py  schemas.py
app/routers/: payments.py  test_routes.py
app/services/: repository.py  security.py
app/tests/: conftest.py  test_payment.py
app/tools/: logging.py
cmd/: entrypoint.sh
infra/kubernetes/base/: kustomization.yaml
infra/kubernetes/base/db/: mongo-db-deployment.yaml  mongo-db-pvc.yaml  mongo-db-service.yaml
infra/kubernetes/base/payment/: configmap.yaml  deployment.yaml  service.yaml
infra/kubernetes/development/: kustomization.yaml  patch-configmap.yaml  patch-deployment.yaml
infra/kubernetes/production/: kustomization.yaml  patch-deployment.yaml
